Inclusao de autenticacao - basic auth

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,3 +6,6 @@ campo.produto-valor-unitario.obrigatorio=Por favor, informe o valor unitário.
 campo.pedidoDTO-cliente=Informe o código do cliente
 campo.pedidoDTO-total=O total do pedido precisa ser informado.
 campo.pedidoDTO-itens=O pedido não pode ser realizado sem conter ao menos um item.
+
+campo.usuario-login.obrigatorio=É preciso informar o nome de usuário
+campo.usuario-senha.obrigatorio=É preciso informar uma senha
